# notion-mcp-light

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
docs/: design.md
src/: __init__.py  main.py  markdown_converter.py  mcp_server.py  notion_client.py
tests/: test_main.py
